syntax = "proto3";

option csharp_namespace = "LibraryMvcClient.Protos";

package library;

message Book {
    string id = 1;
    string title = 2;
    string author = 3;
    string genre = 4;
    int32 publication_year = 5;
}

message CreateBookRequest {
    Book book = 1;
}

message CreateBookResponse {
    string id = 1;
}

message GetBookRequest{
    string id = 1;
}

message GetBookResponse {
    Book book = 1;
}

message UpdateBookRequest {
    Book book = 1;
}

message UpdateBookResponse {
    bool success = 1;
}

message DeleteBookRequest {
    string id = 1;
}

message DeleteBookResponse{
    bool success = 1;
}

message ListBooksRequest{}

message ListBooksResponse {
    repeated Book books = 1;
}

service LibraryService {
    rpc CreateBook(CreateBookRequest) returns (CreateBookResponse);
    rpc GetBook(GetBookRequest) returns (GetBookResponse);
    rpc UpdateBook(UpdateBookRequest) returns (UpdateBookResponse);
    rpc DeleteBook(DeleteBookRequest) returns (DeleteBookResponse);
    rpc ListBooks(ListBooksRequest) returns (ListBooksResponse);
}